# winapi-wrapper

./: .gitignore  CMakeLists.txt  License.txt  Readme.md  application.cpp  combobox_getlbtext.cpp  comboboxex_getitemtext.cpp  default_mdichild_class.cpp  dialog.cpp  dialog_go1.cpp  dialog_go2.cpp  edit_getline.cpp  listbox_gettext.cpp  listview_getitemtext.cpp  mdichild.cpp  mdichild_defaultproc.cpp  mdiwindow.cpp  menu_getstring.cpp  regkey_deletekeytree.cpp  regkey_enum.cpp  regkey_enumkeys2.cpp  regkey_queryvalue.cpp  statusbar_gettext.cpp  statusbar_gettiptext.cpp  tabcontrol_getitemtext.cpp  toolbar_getbuttontext.cpp  treeitem_getitemtext.cpp  winapi.h  window.cpp  window_class.cpp  window_gettext.cpp  windowclass_constructor.cpp  winmain.cpp
Examples/: mdi.cpp
Examples/Dialog/: dlg_modal.cpp  dlg_modeless.cpp  resource.h
examples/: CMakeLists.txt  mdi.cpp  sdi.cpp
examples/multithreading/: Multithreading.cpp  mtdialog.rc  resource.h
examples_/: sdi.cpp
examples_/dialog_/: dialog.rc
examples_/multithreading_/: resource.h
include/: winapi.h
src/: combobox_getlbtext.cpp  comboboxex_getitemtext.cpp  default_window_class.cpp  dialog_enddialog.cpp  edit_getline.cpp  listbox_gettext.cpp  listview_getitemtext.cpp  mdichild.cpp  mdiwindow.cpp  menu_getstring.cpp  modelessdialog_create1.cpp  modelessdialog_create2.cpp  modelessdialog_create3.cpp  passlparam.h  regkey_deletekeytree.cpp  regkey_enum.cpp  regkey_enumkeys.cpp  regkey_enumkeys2.cpp  regkey_queryvalue.cpp  socket.cpp  statusbar_gettext.cpp  statusbar_gettiptext.cpp  tabcontrol_getitemtext.cpp  thread.cpp  toolbar_getbuttontext.cpp  treeitem_getitemtext.cpp  window_class.cpp  window_defaultproc.cpp  window_gettext.cpp  winmain.cpp
